fix: add question stem alignment feature with corresponding styles and markup

--- a/styles.css
+++ b/styles.css
@@ -594,12 +594,30 @@ label {
 }
 
 .question-stem-inline {
+  display: block;
+  flex: 1;
   min-width: 0;
   font-weight: 400;
   font-size: var(--question-font-size, 13px);
   line-height: 1.35;
   white-space: normal;
   overflow-wrap: anywhere;
+}
+
+.text-align-justify {
+  text-align: justify;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
 }
 
 .question-actions {
@@ -647,6 +665,8 @@ label {
 }
 
 .question-body-text {
+  display: block;
+  width: 100%;
   white-space: pre-wrap;
 }
 
